Update roxygen on some files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(TimeStratPetersenDiagErrorWHSteel_fit)
 export(TimeStratPetersenDiagError_fit)
 export(TimeStratPetersenNonDiagError_fit)
 export(TimeToTargetRunSize)
+export(expit)
 export(logit)
