--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Imports: actuar,
          ggplot2,
          graphics, 
          grDevices,
+         gridExtra,
          plyr, 
          rjags, 
          R2OpenBUGS, 
