Convert acf plots to ggplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,14 @@
 
 export(RunTime)
 export(SimplePetersen)
+export(TestIfPool)
+export(TimeStratPetersenDiagErrorWHChinook2_fit)
 export(TimeStratPetersenDiagErrorWHChinook_fit)
 export(TimeStratPetersenDiagErrorWHSteel_fit)
 export(TimeStratPetersenDiagError_fit)
 export(TimeStratPetersenNonDiagErrorNP)
+export(TimeStratPetersenNonDiagErrorNPMarkAvail)
+export(TimeStratPetersenNonDiagErrorNPMarkAvail_fit)
 export(TimeStratPetersenNonDiagErrorNP_fit)
 export(TimeStratPetersenNonDiagError_fit)
 export(TimeToTargetRunSize)
