Convert trace plots to ggplot. Roxygen updates.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ Imports:
     actuar, 
     coda, 
     ggplot2,
+    ggforce,
     graphics, 
     grDevices,
     gridExtra,
     plyr, 
+    reshape2,
     rjags, 
     R2OpenBUGS, 
     splines, 
