--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,6 @@ export(TimeStratPetersenDiagErrorWHChinook2_fit)
 export(TimeStratPetersenDiagErrorWHChinook_fit)
 export(TimeStratPetersenDiagErrorWHSteel_fit)
 export(TimeStratPetersenDiagError_fit)
-export(TimeStratPetersenNonDiagErrorNP)
-export(TimeStratPetersenNonDiagErrorNPMarkAvail)
 export(TimeStratPetersenNonDiagErrorNPMarkAvail_fit)
 export(TimeStratPetersenNonDiagErrorNP_fit)
 export(TimeStratPetersenNonDiagError_fit)
@@ -17,11 +15,13 @@ export(expit)
 export(logit)
 import(R2OpenBUGS)
 import(actuar)
+import(ggforce)
 import(ggplot2)
 import(grDevices)
 import(graphics)
 import(gridExtra)
 import(plyr)
+import(reshape2)
 import(rjags)
 import(splines)
 import(stats)
