--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: BTSPAS
 Version: 2019.0101
 Date: 2019-01-01
 Title: Bayesian Time-Strat. Population Analysis
-Author: Carl J Schwarz <cschwarz@stat.sfu.ca> and
-	Simon J Bonner <simon.bonner@uky.edu>
-Maintainer: Carl J Schwarz <cschwarz@stat.sfu.ca>
+Author: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com> and
+	Simon J Bonner <sbonner@uwo.ca>
+Maintainer: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com>
 Imports: 
     actuar,
     binom,
