Convert all demos to vignettes. Fix problem when posterior sample of 2D matrix is not stored properly in BUGS object.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(TimeStratPetersenNonDiagError_fit)
 export(TimeToTargetRunSize)
 export(expit)
 export(logit)
-import(R2OpenBUGS)
+import(R2jags)
 import(actuar, except = cm) 
 import(ggforce)
 import(ggplot2)
@@ -22,9 +22,9 @@ import(graphics)
 import(gridExtra)
 import(plyr)
 import(reshape2)
-import(rjags)
 import(splines)
 import(stats)
 import(utils)
 importFrom(actuar,grouped.data)
+importFrom(coda,as.mcmc.list)
 importFrom(data.table,setDT)
