--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Version: 2019.0101
 Date: 2019-01-01
 Title: Bayesian Time-Strat. Population Analysis
 Author: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com> and
-	Simon J Bonner <sbonner@uwo.ca>
+	Simon J Bonner <sbonner6@uwo.ca>
 Maintainer: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com>
 Imports: 
     actuar,
@@ -17,8 +17,7 @@ Imports:
     gridExtra,
     plyr, 
     reshape2,
-    rjags, 
-    R2OpenBUGS, 
+    R2jags, 
     splines, 
     stats, 
     utils
