--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: BTSPAS
-Version: 2020.1
+Version: 2020.1.1
 Date: 2020-01-01
-Title: Bayesian Time-Strat. Population Analysis
+Title: Bayesian Time-Stratified Population Analysis
 Author: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com> and
 	Simon J Bonner <sbonner6@uwo.ca>
 Maintainer: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com>
 Imports: 
     actuar,
-    binom,
     coda, 
     data.table,
     ggplot2,
@@ -29,8 +28,6 @@ Description: Provides advanced Bayesian methods to estimate
   	     and spline smoothing of the daily run size.
 License: GPL (>=2)
 URL: http://www.stat.sfu.ca/~cschwarz/Consulting/Trinity/Phase2
-RoxygenNote: 7.0.0
-Suggests: 
-    knitr,
-    rmarkdown
-VignetteBuilder: knitr
+RoxygenNote: 7.0.1
+Suggests: R.rsp
+VignetteBuilder: R.rsp
