--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BTSPAS
-Version: 2020.1.1
-Date: 2020-01-01
+Version: 2020.2.2
+Date: 2020-08-31
 Title: Bayesian Time-Stratified Population Analysis
 Author: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com> and
 	Simon J Bonner <sbonner6@uwo.ca>
@@ -27,7 +27,7 @@ Description: Provides advanced Bayesian methods to estimate
 	     hierarchical modelling of the capture probabilities
   	     and spline smoothing of the daily run size.
 License: GPL (>=2)
-URL: http://www.stat.sfu.ca/~cschwarz/Consulting/Trinity/Phase2
-RoxygenNote: 7.0.1
+URL: https://github.com/cschwarz-stat-sfu-ca/BTSPAS
+RoxygenNote: 7.1.1
 Suggests: R.rsp
 VignetteBuilder: R.rsp
