--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Description: Provides advanced Bayesian methods to estimate
 	     abundance and run-timing from temporally-stratified
 	     Petersen mark-recapture experiments. Methods include
 	     hierarchical modelling of the capture probabilities
-  	     and spline smoothing of the daily run size.
+  	     and spline smoothing of the daily run size. Theory
+  	     described in Bonner and Schwarz (2011)
+         <doi:10.1111/j.1541-0420.2011.01599.x>.
 License: GPL (>=2)
 URL: https://github.com/cschwarz-stat-sfu-ca/BTSPAS
 RoxygenNote: 7.1.1
