--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,8 +24,24 @@ import(plyr)
 import(reshape2)
 import(scales)
 import(splines)
-import(stats)
 import(utils)
 importFrom(actuar,grouped.data)
 importFrom(coda,as.mcmc.list)
 importFrom(data.table,setDT)
+importFrom(stats,acf)
+importFrom(stats,approx)
+importFrom(stats,chisq.test)
+importFrom(stats,dbinom)
+importFrom(stats,density)
+importFrom(stats,dmultinom)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,pnorm)
+importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rmultinom)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,spline)
+importFrom(stats,var)
